[gd_scene load_steps=19 format=3 uid="uid://csten78itygrj"]

[ext_resource type="Texture2D" uid="uid://dun4ng0ppxgub" path="res://assets/menu/MenuBackground.png" id="1_8yby5"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_otsdi"]
[ext_resource type="Texture2D" uid="uid://bbhsf3abhm1f8" path="res://assets/menu/MenuLandscape.png" id="2_ini4t"]
[ext_resource type="Texture2D" uid="uid://bk230x83x6v0p" path="res://assets/player/QuailBaby1.png" id="3_ai5w4"]
[ext_resource type="PackedScene" uid="uid://8w8wqgsf5vbs" path="res://parallax_background.tscn" id="3_r3he0"]
[ext_resource type="Texture2D" uid="uid://btye3dun0qtel" path="res://assets/player/QuailBaby2.png" id="4_dsl5h"]
[ext_resource type="Texture2D" uid="uid://csmbhd3o5idoh" path="res://assets/player/QuailBaby3.png" id="5_uomgj"]
[ext_resource type="Texture2D" uid="uid://bi65u10foijt6" path="res://assets/player/QuailRun1.png" id="7_cjc1g"]
[ext_resource type="Texture2D" uid="uid://c6fbtfgmm2ua2" path="res://assets/player/QuailRun2.png" id="8_gie34"]
[ext_resource type="Texture2D" uid="uid://bqywkluqr3eot" path="res://assets/player/QuailRun3.png" id="9_xobrk"]
[ext_resource type="Texture2D" uid="uid://ce6nun7tfi57g" path="res://assets/player/QuailRun4.png" id="10_x6aul"]
[ext_resource type="Texture2D" uid="uid://5gy1dnv6xuw1" path="res://assets/player/QuailRun5.png" id="11_i7p4u"]
[ext_resource type="Texture2D" uid="uid://1ofscm18b474" path="res://assets/player/QuailRun6.png" id="12_6rmpi"]
[ext_resource type="Texture2D" uid="uid://cbeioutgn12aj" path="res://assets/player/QuailRun7.png" id="13_e2ebm"]
[ext_resource type="FontFile" uid="uid://chlo1df4t6fcd" path="res://assets/ui/fonts/rainyhearts.ttf" id="14_qf2yh"]
[ext_resource type="AudioStream" uid="uid://dle8qk27avik" path="res://assets/sounds/BirdAmbience.ogg" id="16_1uy3b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_62513"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ai5w4")
}, {
"duration": 1.0,
"texture": ExtResource("4_dsl5h")
}, {
"duration": 1.0,
"texture": ExtResource("5_uomgj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_i8by4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_cjc1g")
}, {
"duration": 1.0,
"texture": ExtResource("8_gie34")
}, {
"duration": 1.0,
"texture": ExtResource("9_xobrk")
}, {
"duration": 1.0,
"texture": ExtResource("10_x6aul")
}, {
"duration": 1.0,
"texture": ExtResource("11_i7p4u")
}, {
"duration": 1.0,
"texture": ExtResource("12_6rmpi")
}, {
"duration": 1.0,
"texture": ExtResource("13_e2ebm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_otsdi")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -2)
texture = ExtResource("1_8yby5")

[node name="ParallaxBackground" parent="." instance=ExtResource("3_r3he0")]

[node name="Landscape" type="Sprite2D" parent="."]
position = Vector2(-0.999997, -10)
scale = Vector2(1.7, 1.7)
texture = ExtResource("2_ini4t")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="BabyQuail2" type="AnimatedSprite2D" parent="."]
position = Vector2(81, -55)
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_62513")
autoplay = "default"
frame = 2

[node name="BabyQuail" type="AnimatedSprite2D" parent="."]
position = Vector2(26, -52)
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_62513")
autoplay = "default"
frame = 1

[node name="BabyQuailLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(41, -65)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_62513")
autoplay = "default"

[node name="MainQuail" type="AnimatedSprite2D" parent="."]
position = Vector2(-185, 70)
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_i8by4")
autoplay = "default"

[node name="Label" type="Label" parent="."]
offset_left = -129.0
offset_top = -77.0
offset_right = -55.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("14_qf2yh")
theme_override_font_sizes/font_size = 16
text = "Quail Run
"

[node name="Button" type="Button" parent="."]
offset_left = -114.0
offset_top = -28.0
offset_right = -78.0
offset_bottom = -5.0
theme_override_fonts/font = ExtResource("14_qf2yh")
theme_override_font_sizes/font_size = 16
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = -113.0
offset_top = 2.0
offset_right = -78.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("14_qf2yh")
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_1uy3b")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
